Update romanToInteger.java